# game_theory_cw1

./: .gitignore  CMakeLists.txt  README.md  emd.py  generate_equilibria.py  justfile  n4.py  requirements.txt  tasks.py  test.py  validate_solution.py  validator.py
data/: README.md
data/emd/: d.csv  e.csv
data/r10equilibria/: 2.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv  README.md
data/r11equilibria/: 10.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv  README.md
data/r12equilibria/: 10.csv  11.csv  2.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv  README.md
data/r3equilibria/: README.md
data/r4equilibria/: 2.csv  3.csv  README.md
data/r5equilibria/: 4.csv  README.md
data/r6equilibria/: 2.csv  4.csv  5.csv  README.md
data/r7equilibria/: 4.csv  5.csv  6.csv  README.md
data/r8equilibria/: 2.csv  4.csv  5.csv  6.csv  7.csv  README.md
data/r9equilibria/: 4.csv  5.csv  6.csv  7.csv  8.csv  README.md
report/: README.md  main.typ  refs.bib  template.typ
report/data/: 4.csv  8.csv  9.csv
validator/: README.md  main.c  print_debugger.h  setup.py  validator.c  validator.h  validator_backend.c  validator_backend.h
validator/window/: window.c  window.h
